--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -12,10 +12,10 @@
   <section class="mt-8 md:mt-10">
     <h2 class="text-2xl font-bold text-gray-700">Categories</h2>
     <div class="mt-4 grid grid-cols-2 gap-3 md:grid-cols-4">
-      <app-category></app-category>
-      <app-category></app-category>
-      <app-category></app-category>
-      <app-category></app-category>
+      <app-category name="Pokédex"></app-category>
+      <app-category name="Moves"></app-category>
+      <app-category name="Items"></app-category>
+      <app-category name="Berries"></app-category>
     </div>
   </section>
 </div>
