--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -6,13 +6,15 @@
     placeholder="Search Pokemon, Move, Ability, etc"
     class="
       py-4
-      px-4
+      px-6
       w-full
       rounded-lg
-      text-base
+      text-lg
       bg-gray-100
       text-purple-800
       focus:outline-none
+      focus:ring-4
+      focus:ring-purple-400
       max-w-5xl
     "
   />
