--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,17 +1,17 @@
 <div class="px-5 py-8">
   <header>
-    <h1 class="text-4xl font-extrabold text-gray-800 md:text-center">
-      Welcome to <span class="text-purple-600">Pokédex</span>
+    <h1 class="text-4xl font-extrabold text-gray-800 text-center">
+      <span class="text-purple-600">Oops!</span>
+      There's no such page here
     </h1>
   </header>
 
-  <div class="mt-8">
-    <app-searchbar></app-searchbar>
-  </div>
+  <h2 class="mt-10 text-center font-bold text-lg text-gray-700">
+    Here, try explore these subjects
+  </h2>
 
   <section class="mt-8 md:mt-10">
-    <h2 class="text-2xl font-bold text-gray-700">Categories</h2>
-    <div class="mt-4 grid grid-cols-2 gap-3 md:grid-cols-4">
+    <div class="grid gap-3 md:grid-cols-4">
       <app-category name="Pokédex" pageUrl="pokedex-list"></app-category>
       <app-category name="Moves" pageUrl="moves"></app-category>
       <app-category name="Items" pageUrl="items"></app-category>
