refactor: change scss into css in angular.json, delete all unused components scss file

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="px-5 py-8">
+<div class="page-container">
   <header>
     <h1 class="text-4xl font-extrabold text-gray-800 md:text-center">
       Welcome to <span class="text-purple-600">Pokédex</span>
