--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,23 @@
-<p>nav works!</p>
+<nav class="px-5 py-5 flex justify-between items-center">
+  <button 
+    (click)="back()"
+    class="
+      px-5 py-3
+      bg-gray-200
+      rounded-full
+      text-gray-800
+      font-semibold
+      hover:bg-purple-700
+      hover:text-white
+      transition
+      duration-100
+      ease-linear
+    "
+  >
+    Back
+  </button>
+
+  <div>
+    <div>asdsadsa</div>
+  </div>
+</nav>
