--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,1 +1,4 @@
-<p>pokedex works!</p>
+<app-nav></app-nav>
+<div class="page-container">
+  <h2 class="text-2xl font-bold text-gray-700">Pokédex</h2>
+</div>
