--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,16 +1,16 @@
-<div class="px-5 py-8">
+<div class="page-container">
   <header>
-    <h1 class="text-4xl font-extrabold text-gray-800 text-center">
+    <h1 class="text-center">
       <span class="text-purple-600">Oops!</span>
       There's no such page here
     </h1>
   </header>
 
-  <h2 class="mt-10 text-center font-bold text-lg text-gray-700">
-    Here, try explore these subjects
+  <h2 class="mt-14 text-center">
+    Here, try to explore these subjects
   </h2>
 
-  <section class="mt-8 md:mt-10">
+  <section>
     <div class="grid gap-3 md:grid-cols-4">
       <app-category name="Pokédex" pageUrl="pokedex-list"></app-category>
       <app-category name="Moves" pageUrl="moves"></app-category>
