--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
 <div class="page-container">
-  <h2 class="text-2xl font-bold text-gray-700">Pokédex</h2>
+  <h2>Pokédex</h2>
 </div>
