feat: add nav component to pages: my-bag, berries, items, moves style: @apply my-bag-style to tailwindcss configuration in style.css for my-bag component style: change searchbar ring color

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -37,16 +37,7 @@
     </button>
     <ul class="grid grid-cols-1 gap-4 mt-10">
       <li>
-        <a
-          routerLink="/my-bag"
-          class="
-            nav-item
-            bg-[#06D6A0]
-            hover:bg-[#32ad8c]
-            text-[#035853]
-            hover:text-white
-          "
-          >My Bag</a>
+        <a class="nav-item my-bag-styles" routerLink="/my-bag">My Bag</a>
       </li>
       <li><a class="nav-item" routerLink="/home">Home</a></li>
       <li><a class="nav-item" routerLink="/pokedex-list">Pokédex</a></li>
