--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -6,9 +6,7 @@
     </h1>
   </header>
 
-  <h2 class="mt-14 text-center">
-    Here, try to explore these subjects
-  </h2>
+  <h2 class="mt-14 text-center">Here, try to explore these subjects</h2>
 
   <section>
     <div class="grid gap-3 md:grid-cols-4">
@@ -17,5 +15,10 @@
       <app-category name="Items" pageUrl="items"></app-category>
       <app-category name="Berries" pageUrl="berries"></app-category>
     </div>
+  </section>
+
+  <section class="flex justify-center">
+    <a class="btn-round mr-4" routerLink="/home">Back to Homepage</a>
+    <a class="btn-round my-bag-styles" routerLink="/my-bag">See my bag</a>
   </section>
 </div>
