refactor: rename PokeType model into NameUrl feat: add new models: EffectEntries, VersionDetails, Berry, Items, Moves, PokemonDetails feat: create new method in pokedex.service & pokedex.component to fetch list of pokemon and show the returned value in pokedex template

--- a/src/app/pages/pokedex/pokedex.component.html
+++ b/src/app/pages/pokedex/pokedex.component.html
@@ -25,4 +25,10 @@
       class="absolute top-0 right-0 bg-gradient-to-l from-white h-12 w-1/12"
     ></div>
   </div>
+
+  <section>
+    <div *ngFor="let pokemon of pokemonList">
+      <h3>{{ pokemon.name }}</h3>
+    </div>
+  </section>
 </div>
