feat: add new pokecard component to show fetched pokemon list data in pokedex page feat: add new getPokemonDetails method in pokedex.service to fetch pokemon's detailed data feat: add new pokemon-details page to show detailed page for the pokemon. still a empty page for now

--- a/src/app/pages/pokedex/pokedex.component.html
+++ b/src/app/pages/pokedex/pokedex.component.html
@@ -26,9 +26,7 @@
     ></div>
   </div>
 
-  <section>
-    <div *ngFor="let pokemon of pokemonList">
-      <h3>{{ pokemon.name }}</h3>
-    </div>
+  <section class="grid grid-cols-2 md:grid-cols-3 gap-4">
+    <app-pokecard *ngFor="let pokemon of pokemonList" [data]="pokemon"></app-pokecard>
   </section>
 </div>
