feat: add text-label component feat: add styling to pokecard component feat: add image and its styling inside the pokecard component refactor: change all components's selector from /component by removing the "app-" part except for the app-nav

--- a/src/app/components/pokecard/pokecard.component.html
+++ b/src/app/components/pokecard/pokecard.component.html
@@ -1,4 +1,16 @@
-<div class="bg-green-300 rounded-xl px-2 md:px-3 py-8">
-  <p class="top-2 left-2 text-sm font-semibold text-white">#001</p>
+<div class="bg-green-300 hover:bg-green-400 transition duration-100 ease-linear hover:cursor-pointer rounded-xl px-2 md:px-3 py-8 relative">
+  <p class="top-2 left-2 text-sm font-bold text-black text-opacity-40">#001</p>
+
   <p class="text-gray-800 font-bold mt-2">{{ data.name | titlecase }}</p>
+
+  <div class="flex space-x-2 mt-2">
+    <text-label>Grass</text-label>
+    <text-label>Poison</text-label>
+  </div>
+
+  <img
+    class="card-image-view"
+    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
+    alt="bulbasaur"
+  />
 </div>
