--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -4,23 +4,23 @@
   </header>
 
   <div class="mt-8">
-    <app-searchbar></app-searchbar>
+    <searchbar></searchbar>
   </div>
 
   <section>
     <h2>Categories</h2>
     <div class="mt-4 grid grid-cols-2 gap-3 md:grid-cols-4">
-      <app-category name="Pokédex" pageUrl="pokedex-list"></app-category>
-      <app-category name="Moves" pageUrl="moves"></app-category>
-      <app-category name="Items" pageUrl="items"></app-category>
-      <app-category name="Berries" pageUrl="berries"></app-category>
+      <category name="Pokédex" pageUrl="pokedex-list"></category>
+      <category name="Moves" pageUrl="moves"></category>
+      <category name="Items" pageUrl="items"></category>
+      <category name="Berries" pageUrl="berries"></category>
     </div>
   </section>
 
   <section>
     <h2>Collections</h2>
     <div class="mt-4">
-      <app-category name="My Bag" pageUrl="my-bag"></app-category>
+      <category name="My Bag" pageUrl="my-bag"></category>
     </div>
   </section>
 </div>
