--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -10,10 +10,10 @@
 
   <section>
     <div class="grid gap-3 md:grid-cols-4">
-      <app-category name="Pokédex" pageUrl="pokedex-list"></app-category>
-      <app-category name="Moves" pageUrl="moves"></app-category>
-      <app-category name="Items" pageUrl="items"></app-category>
-      <app-category name="Berries" pageUrl="berries"></app-category>
+      <category name="Pokédex" pageUrl="pokedex-list"></category>
+      <category name="Moves" pageUrl="moves"></category>
+      <category name="Items" pageUrl="items"></category>
+      <category name="Berries" pageUrl="berries"></category>
     </div>
   </section>
 
