--- a/src/app/pages/pokedex/pokedex.component.html
+++ b/src/app/pages/pokedex/pokedex.component.html
@@ -16,8 +16,9 @@
         md:pr-20
       "
     >
-      <button class="btn-round" *ngFor="let type of pokemonTypes">
-        {{ type.name }}
+      <button class="btn-round" (click)="getPokemonList()">All Type</button>
+      <button class="btn-round" *ngFor="let type of pokemonTypes" (click)="getPokemonBasedOnType(type.name)">
+        {{ type.name | titlecase }}
       </button>
     </div>
 
