--- a/src/app/pages/pokedex/pokedex.component.html
+++ b/src/app/pages/pokedex/pokedex.component.html
@@ -28,6 +28,6 @@
   </div>
 
   <section class="card-grid-view">
-    <pokecard *ngFor="let pokemon of pokemonList" [data]="pokemon"></pokecard>
+    <pokecard *ngFor="let pokemon of pokemonDetails" [data]="pokemon"></pokecard>
   </section>
 </div>
