feat: create new PokemonDetails page with dynamic routing of pokemonName that accepts pokemon name refactor: remove some unused code from pokecard.component refactor: remove url property from pokemon-details model refactor: remove unused getPokemonList m from pokedex.component feat: add navigateToPokemonDetailsPage method in pokedex.component to navigate to the detailed page of clicked pokemon card or via browser url feat: add new getPokemonFromName method in pokemon-details page to fetch specific pokemon from its API refactor: change getPokemonFromUrl to  getPokemonFromName to adjust its usage with pokemon-details page

--- a/src/app/pages/pokedex/pokedex.component.html
+++ b/src/app/pages/pokedex/pokedex.component.html
@@ -16,8 +16,12 @@
         md:pr-20
       "
     >
-      <button class="btn-round" (click)="getPokemonList()">All Type</button>
-      <button class="btn-round" *ngFor="let type of pokemonTypes" (click)="getPokemonBasedOnType(type.name)">
+      <button class="btn-round" (click)="getPokemonDetails()">All Type</button>
+      <button
+        class="btn-round"
+        *ngFor="let type of pokemonTypes"
+        (click)="getPokemonBasedOnType(type.name)"
+      >
         {{ type.name | titlecase }}
       </button>
     </div>
@@ -28,6 +32,10 @@
   </div>
 
   <section class="card-grid-view">
-    <pokecard *ngFor="let pokemon of pokemonDetails" [data]="pokemon"></pokecard>
+    <pokecard
+      *ngFor="let pokemon of pokemonDetails"
+      [data]="pokemon"
+      (click)="navigateToPokemonDetailsPage(pokemon.name)"
+    ></pokecard>
   </section>
 </div>
