--- a/src/app/components/pokecard/pokecard.component.html
+++ b/src/app/components/pokecard/pokecard.component.html
@@ -25,7 +25,7 @@
 >
   <div>
     <span class="text-sm font-semibold text-black text-opacity-50">
-      {{ data.id }}
+      {{ data.pokemonId }}
     </span>
 
     <p class="text-gray-800 font-bold mt-1">{{ data.name | titlecase }}</p>
