style: remove .card-image-view class from style.css style: remove .card-image-view class from pokecard img & change alt text to data.name feat: add getPokemonDetailsBasedOnType in pokedex.service to fetch pokemon details data based from selected pokemon type

--- a/src/app/components/pokecard/pokecard.component.html
+++ b/src/app/components/pokecard/pokecard.component.html
@@ -38,8 +38,8 @@
   </div>
 
   <img
-    class="card-image-view"
+    
     src="{{ data.details.imageUrl }}"
-    alt="bulbasaur"
+    alt="{{ data.name | titlecase }}"
   />
 </div>
