feat: add new pokecard-detail component as a component to show detail information of the pokemon in pokemon details page refactor: removed unused styles in style.css style: add some styling for paragraph element feat: add Location method from @angular/common in pokemon-details.component to call getPokemonFromName when the url is changed

--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -16,6 +16,7 @@
     duration-100
     transform
     ease-in-out
+    group
     md:hover:-translate-y-1
     md:hover:shadow-lg
     md:hover:bg-gradient-to-r
@@ -25,5 +26,5 @@
   "
   (click)="navigateToPage(pageUrl)"
 >
-  <p>{{ name }}</p>
+  <p class="group-hover:text-white">{{ name }}</p>
 </div>
